--- a/src/content/posts/cored20rpg/firearms.mdx
+++ b/src/content/posts/cored20rpg/firearms.mdx
@@ -325,13 +325,14 @@ FLINTLOCK Кремневое оружие
 
 ## Дополнения
 
-**Сошки**
+**Сошка.** Сошка - это легкое крепление для винтовки. Персонаж, потративший время на установку и закре- пление винтовки с сошкой, игнорирует свойство тяже- сти оружия, если оно у него есть. Первая атака персона- жа в каждый ход с винтовкой, закрепленной на сошках, получает бонус +1 к броску атаки. 
 
-**Бандольер для патронов**
+**Бандольер для патронов.** Этот простой кожаный перекрестный ремень имеет от десяти до двенадцати кожаных  петель,  подходящих  для  хранения  зарядов огнестрельного оружия, которые можно легко достать во время боя. Такое снаряжение обычно выдается как военным подразделениям, так и вооруженным пистоле- тами силам
 
 **Бандольер для пистолетов**
 
-**Пружинная запястная кобура**
+**Пружинная запястная кобура.** Эти   кожаные браслеты оснащены пружинным механизмом, который удерживает кинжал или пистолет на запястье и при сра- батывании быстро перебрасывает его в руку владельца. Природа этого устройства позволяет легко скрыть его под свободным, распущенным рукавом. Вы можете до- стать или убрать в ножны оружие в кобуре с наручной пружиной свободным действием, даже если вы уже до- стали или убрали в ножны оружие во время своего хода.
+Бандольер для патронов. Этот простой кожаный перекрестный ремень имеет от десяти до двенадцати кожаных  петель,  подходящих  для  хранения  зарядов огнестрельного оружия, которые можно легко достать во время боя. Такое снаряжение обычно выдается как военным подразделениям, так и вооруженным пистоле- тами силам
 
 **Ускоритель заряжания**
 
@@ -346,6 +347,35 @@ FLINTLOCK Кремневое оружие
 **Нарезной ствол**
 
 **Револьверный механизм**
+
+**Прицел, на ружье или пистолет.** Прикрепленный к ружью или пистолету, этот прицел обеспечивает оп- тическое увеличение, повышающее точность стрельбы на дальние дистанции. Когда вы совершаете действие «Атака» и атакуете из винтовки или пистолета, осна- щенного прицелом, вы можете использовать бонусное действие, чтобы прицелиться через прицел, что увели- чивает обычную и дальнюю дальность стрельбы оружия на 50%. Прицел также работает как подзорная труба. 
+
+### Модификации
+Модификация, Многоствольное оружие (2). Это огнестрельное оружие было создано со вторым стволом, включая дополнительный курок для его взведения. Эта модификация может применяться к оружию из ограниченного списка "Огнестрельное оружие 2". Каждый из стволов оружия стреляет отдельно. Стволы могут быть созданы с различными модификациями ствола. Каждый дополнительный ствол изменяет значение перезарядки огнестрельного оружия на +1
+Модификация, Открытый ствол (2). Это оружие было создано с гладкой внутренней частью ствола, более широкой, чем у обычных версий пистолета. Оружие более снисходительно к плохо отмеренным порциям пороха и менее восприимчиво к нагару.Эта модификация может применяться к оружию из ограниченного списка "Огнестрельное оружие 2". Уменьшите рейтинг осечек этого оружия на 1, а если это свойство ранее не имело рейтинга 2 или выше, то удалите его совсем. Эта модификация несовместима с нарезными стволами.
+Модификация, Удлиненный магазин (3). Часть этого оружия, содержащая боеприпасы, изготовлена увеличенной, чтобы вмещать дополнительные боеприпасы. Оружие, обладающее свойством магазина, может добавить эту модификацию. Оно вмещает в два раза больше патронов, чем указано в рейтинге магазина, с округлением вниз. (Рейтинг магазина, равный 1, не может быть улучшен.) Модификация с удлиненным магазином не совместима с другими модификациями. Пистолет с этой модификацией не может пользоваться кобурой скрытого ношения или кобурой быстрого извлечения.
+Перегородка ствола. Этот странный цилиндр крепится к концу ствола винтовки. Заполненный мелким алхимическим порошком, распределенным по нескольким небольшим отделениям, этот прибор заглушает звук выстрела из винтовки. Эти устройства были успешно разработаны только для винтовок и имеют некоторые недостатки. Несмотря на то, что заглушка рассеивает основную часть шума, производимого при стрельбе из винтовки, делая практически невозможным определение местонахождения скрытого стрелка только по звуку, она также сокращает нормальный прирост дальности стрельбы винтовки на 30 футов. Каждая перегородка может быть использована десять раз до замены алхимического порошка. Прикрепление дефлектора ствола к винтовке - это стандартное действие. Перегородки для ствола нельзя использовать, если к винтовке прикреплен штык. Стоимость: 40 gp за перегородку, 15 gp для замены пороха (Craft [alchemy] DC 12).
+Прицел, на ружье или пистолет. Прикрепленный к ружью или пистолету, этот прицел обеспечивает оп- тическое увеличение, повышающее точность стрельбы на дальние дистанции. Когда вы совершаете действие «Атака» и атакуете из винтовки или пистолета, оснащенного прицелом, вы можете использовать бонусное действие, чтобы прицелиться через прицел, что увеличивает обычную и дальнюю дальность стрельбы оружия на 50%. Прицел также работает как подзорная труба. 
+Прицельные линзы.
+Сошка. Сошка - это легкое крепление для винтовки. Персонаж, потративший время на установку и закре- пление винтовки с сошкой, игнорирует свойство тяже- сти оружия, если оно у него есть. Первая атака персона- жа в каждый ход с винтовкой, закрепленной на сошках, получает бонус +1к4 к броску атаки. 
+Штык. Это оружие представляет собой длинное лезвие, прикрепленное к концу длинного ствола винтовки для использования в ближнем бою. Штык может быть прикреплен к длинноствольному оружию (например, к винтовке) или снят с него в качестве бонусного действия. Когда Вы используете длинноствольное оружие с присоединенным штыком для атаки ближнего боя, Вы обращаетесь с ним как с копьем. Пока штык прикреплен, длинноствольное оружие может стрелять как оружие дальнего боя, но со штрафом -1 к броскам атаки. Штык также можно использовать как кинжал, когда он не прикреплен к длинноствольному оружию.
+Вариации
+Нарезной ствол.
+Второй ствол.
+Улучшения
+Улучшение, обойма для боеприпасов. Для пистолета обойма для патронов - это цилиндр револьвера, позволяющий сделать шесть выстрелов до перезарядки. Для карабина, мушкета или дробовика обойма с боеприпасами - это обойма со стриппером, которая вмещает пять патронов. Замена обоймы требует действия или бонусного действия.
+Улучшение, Подавитель (Enhancement, Suppressor). Ваши выстрелы относительно тихие, а огнестрельное оружие с подавителем теряет свойство "Громкость". Если Вы скрыты в момент атаки, то Вы остаетесь скрытым от существ, находящихся на расстоянии более 50 футов от Вас. Однако существо, в которое попали, знает, с какого направления был произведен выстрел.
+Улучшение, Подавитель (Enhancement, Suppressor). Этот цилиндр крепится к концу огнестрельного оружия и заполнен как алхимическим гелем, поглощающим звуковую энергию, так и вентиляционными отверстиями для перенаправления выходящих газов. Это уменьшает шум, производимый выстрелом, но также уменьшает и силу выстрела. Оружие, оснащенное подавителем, может быть услышано только существами в радиусе 30 футов, и эти существа имеют недостаток при проверке Мудрости (Восприятия), чтобы определить местоположение стрелка. Оружие с этой модификацией уменьшает ближний радиус действия на 10 футов, а дальний - на 30 футов, до минимальных 5 и 15 футов. Оружие с подавителем не может установить штык. Оружие с несколькими стволами не может установить подавитель. Подавитель стоит 150 gp.
+Улучшение, прицел, винтовка или пистолет. Прикрепленное к винтовке или пистолету, это прицельное приспособление обеспечивает оптическое увеличение, которое повышает точность стрельбы на дальних дистанциях. Когда Вы выполняете действие Атака и атакуете из винтовки или пистолета, оснащенного оптическим прицелом, Вы можете использовать бонусное действие, чтобы прицелиться через прицел, что увеличивает нормальную и дальнюю дальность стрельбы оружия на 50%. Прицел также работает как подзорная труба.
+Улучшение, прицел. Оптика, установленная над стволом оружия, может заставить далекие объекты казаться ближе, тем самым увеличивая эффективную дальность действия оружия. Оружие, оснащенное оптическим прицелом, увеличивает свою ближнюю дальность на 20 футов, а дальнюю - на 60 футов. Эта модификация стоит 175 gp.
+Улучшение, Прицеливание. Установить правильный прицел на огнестрельное оружие непросто, особенно на гладкоствольное, но возможно. Это требует нескольких часов (в пределах длительного отдыха) и дает бонус +1 к атаке при использовании огнестрельного оружия. Чтобы правильно установить прицел на огнестрельное оружие, Вам необходимо сделать проверку способностей DC 20 Wisdom с бонусом к квалификации оружейного инструмента. Добавьте 100 gp, чтобы приобрести огнестрельное оружие с прицелом, или 200 gp, чтобы добавить прицел к уже имеющемуся огнестрельному оружию.
+Улучшение, Прицеливание. Установить правильный прицел на огнестрельное оружие непросто, особенно на гладкоствольное, но возможно. Это требует нескольких часов (в пределах длительного отдыха) и дает бонус +1 к атаке при использовании огнестрельного оружия. Чтобы правильно установить прицел на огнестрельное оружие, Вам необходимо сделать проверку способностей DC 20 Wisdom с бонусом к квалификации оружейного инструмента. Добавьте 100 gp, чтобы приобрести огнестрельное оружие с прицелом, или 200 gp, чтобы добавить прицел к уже имеющемуся огнестрельному оружию.
+Улучшение, Снайперский прицел. Это усовершенствование эффективно только для нарезного оружия. Вы можете целиться в этот тонко настроенный оптический прицел без необходимости тратить действие. Однако Вы считаетесь слепым, за исключением существ, находящихся на прямой линии от Вас до Вашей цели. Слепота длится до следующего Вашего хода.
+**улучшение, Усиленный ствол. **Вы модифицировали свой ствол, чтобы стрелять более тяжелыми снарядами, например, пробивающими укрытия. Если Ваш ГМ использует альтернативные правила атак, попадающих в укрытие, то при попадании в укрытие Вы наносите половину урона оружия цели, если атака не смогла повредить укрытие. 0Вы также можете атаковать существо, находящееся в полном укрытии; Вы берете штраф -5 к Вашему броску атаки (в дополнение к недостатку, поскольку Вы, скорее всего, не видите цель), и если Вы попадаете, то наносите половину урона. Эти патроны обычно пробивают менее фута дерева или грязи, несколько дюймов камня или полдюйма металла. Боеприпасы, пробивающие покрытие, стоят в два раза дороже обычных боеприпасов.
+
+Барабанный магазин для револьверов.
+
+
 
 ---
 
