--- a/src/content/posts/translations/stuartzaq-original-dnd-succesful-adventures.mdx
+++ b/src/content/posts/translations/stuartzaq-original-dnd-succesful-adventures.mdx
@@ -1,17 +1,17 @@
 ---
-title: [AD&D 1 ed] Успешные приключения
-description: Это перевод последнего перед приложениями раздела в PHB AD&D 1-ой редакции — SUCCESSFUL ADVENTURES.
+title: '[AD&D 1 ed] Успешные приключения'
+description: 'Это перевод последнего перед приложениями раздела в PHB AD&D 1-ой редакции — SUCCESSFUL ADVENTURES.''
 date: 2024-03-20 
 tags:
-  - AD&D
-  - перевод
-  - stuartzaq
-  - Gygax
-  - AD&D 1ed
-  - PHB
-  - Книга Игрока
-author: Gary Gygax
-translator: stuartzaq
+  - 'AD&D'
+  - 'перевод'
+  - 'stuartzaq'
+  - 'Gygax'
+  - 'AD&D 1ed'
+  - 'PHB'
+  - 'Книга Игрока'
+author: 'Gary Gygax'
+translator: 'stuartzaq'
 ---
 
 [Оригинал перевода](https://stuartzaq.blot.im/успешные-приключения)
