--- a/src/content/posts/cored20rpg/martial-schools.mdx
+++ b/src/content/posts/cored20rpg/martial-schools.mdx
@@ -7,4 +7,220 @@ tags:
 - Core d20 RPG
 ---
 
-1
+### Описание Формат школы боевых искусств
+
+Все школы боевых искусств предоставляют своим членам доступ к сочетанию приемов, техник и некоторой физической подготовки. Боевые школы требуют определенного оружия или комбинации оружия или даже определенной брони или другого снаряжения. Вы не можете использовать техники или приемы из школы боевых искусств, если вы не владеете определенным оружием школы и не владеете им.
+
+Название школы
+
+**Требования:** предыстория, владение оружием, владение доспехами, количество способностей или специальные. - какой персонаж должен иметь возможность тренироваться в этой школе.
+
+**Оружие, доспехи и их использование** в Школе боевых искусств – в каждой Школе боевых искусств используется определенное количество оружия и другого снаряжения. Вы не можете использовать маневры или приемы, которые вы получили в Школе боевых искусств, если вы используете другое оружие.
+
+**Родительская школа:** Вы можете получить уровень Мастера в родительской школе, если у вас есть уровень эксперта в этой школе.
+Детская школа: если вы являетесь экспертом в детской школе, вы можете получить уровень Мастера в этой школе.
+
+**Связанная школа:** оба – родитель и ребенок
+
+**Первичная характеристика:** определите, какая способность будет использоваться для Класса сложности Боевых Приемов и Боевых техник.
+КС = 8 + модификатор основной характеристики + бонус владения.
+
+Первичные характеристики являются необходимым условием для обучения в этой школе. Значение первичной характеристики должно быть не менее 14.
+
+**Физическая подготовка:** когда вы берете черту Эксперт, увеличьте соответствующий показатель характеристики на 1, максимум до 20.
+Боевые приемы сложны в исполнении, поэтому вы должны тратить свой кубик превосходства каждый раз, когда используете их.
+
+Боевые техники описывают свойства каждой школы боевых искусств. Это пассивные навыки, для активации которых не требуется никаких действий.
+
+**Приемы эксперта** — это приемы, которые персонаж изучает, когда впервые берёт черту для выбранной Школы.
+
+**Экспертные техники** — это техники, которые персонаж изучает, когда впервые берёт черту для выбранной Школы (выберите 2 из списка доступных техник).
+
+**Мастерские приемы** — это приемы, которые получает персонаж, когда получает черту во второй раз для выбранной Школы.
+
+**Мастерские техники** — это техники, которые получает персонаж, когда берет черту во второй раз для выбранной Школы.
+
+Техники и приемы грандмастера приобретаются персонажем, когда персонаж получает черту грандмастера.
+
+**Знаковое движение**	 – это особая техника или прием, который уникален для этой школы. Персонаж изучает его когда уже знает все приемы и приемы из выбранной школы.
+
+
+### Школа двойного меча
+
+Вы овладели защитным стилем, основанным на владении клинком в каждой руке.
+
+**Требования:** владение воинским оружием
+
+**Оружие:** любые два клинка (кинжал, короткий меч, скимитар, длинный меч, рапира)
+
+**Первичная характеристика:** ловкость
+
+**Физическая подготовка:** ловкость или сила
+
+**Экспертные приемы:** Ответный удар
+
+**Экспертные техники:** Амбидекстрия, Сталь для левой руки
+
+**Мастерские приемы:** на страже
+
+**Мастерские техники:** Защитная стойка, Парирование.
+
+Примечание автора: эта боевая школа имеет много преимуществ, сходных с умениями «Парное оружие» и «Защитный дуэлянт».
+
+### Школа армейского щита
+
+Вы профессиональный солдат, который знает, что его щит не менее силен, чем его оружие.
+
+**Требования:** Владение гладиусом или коротким мечом.
+
+**Оружие:** Военный щит использует щит и гладиус или короткий меч, используя превосходное покрытие щита и скорость гладиуса.
+
+**Первичная характеристика:** Сила
+
+**Физическая подготовка:** сила
+
+**Экспертные приемы:** Калечащая атака
+
+**Экспертные техники:** Защита щитом, Удар щитом
+
+**Мастерские приемы:** точная атака
+
+**Мастерские техники:** отвлекающие удары, угрожающая стойка.
+
+> Примечание автора: преимущества этой боевой школы аналогичны преимуществам умений Мастер Щита (O5E) и Страж (O5E). Gladius будет описан в следующих выпусках
+
+### Древковое оружие
+
+Вы освоили боевые действия древковым оружием.
+
+**Требования:** владение глефой, гизармой или алебардой.
+
+**Оружие:** глефа, гвизарма, алебарда, копье, длинное копье, боевое 
+копье, иклва.
+
+**Первичная характеристика:** сила
+
+**Экспертные приемы:** Trip Attack
+
+**Экспертные техники:** Мастерство древковым оружием, Смертельные удары
+
+**Мастерские приемы:** Точная атака
+
+**Мастерские техники:** Угрожающая стойка, Владение древковым оружием.
+
+> Примечание автора: эта боевая школа является прямой заменой мастера древкового оружия (O5E).
+> 
+>Длинное копье, боевое копье будет описано в следующих выпусках.
+
+### Двойные клинки
+
+Школы двойных клинков, как правило, существуют в очень опасных городах, где главной силой являются преступники, а не официальные представители.
+
+Бойцы этой школы используют легкие клинки, чтобы полностью реализовать потенциал своей высокой ловкости и защитить себя.
+
+**Оружие:** в стиле двойных клинков используются двойные кинжалы, короткие мечи, скимитары или любая комбинация двух легких и фехтовальных видов оружия (например, рапира и кинжал).
+
+**Первичная характеристика:** ловкость
+
+**Физическая подготовка:** ловкость
+
+**Экспертные приемы:** Ответный удар
+
+**Экспертные техники:** Неограниченная защита, Причудливая работа ног
+
+**Мастерские приемы:** Хитрый финт
+
+**Мастерские техники:** Кровь за сталь, Смертельные удары
+
+### Школа тяжелых ударов
+
+Бойцы этой школы максимально эффективно используют двуручное тяжелое оружие.
+
+**Оружие:** тяжелое или универсальное оружие ближнего боя, управляемое двумя руками.
+
+**Первичная характеристика:**Сила
+
+**Физическая подготовка:** сила
+
+**Экспертные приемы:** Точная атака, Опрокидывающая атака
+
+**Экспертные техники:** Удар с натиском, Смертельные удары
+
+**Мастерские приемы:** Давящая аьака, Толкающая атака. Pressing 
+Attack, Pushing Attack
+
+**Мастерские техники:** Рассечение, Угрожающая стойка
+
+### Школа копья и щита
+
+Широко распространенная в известном мире, эта школа предлагает сочетание защиты щитом и универсальности копья.
+
+**Требования:** владение щитом
+
+**Оружие:** копье, дротик, иклва, короткое копье с крючком, боевое 
+копье и любой щит.
+
+**Первичная характеристика:**Сила или Ловкость.
+
+**Физическая подготовка:** сила или ловкость
+
+**Экспертные приемы:** Толкающая атака
+
+**Экспертные техники:** Защита щитом, Отвлекающие удары.
+
+**Мастерские приемы:** точная атака
+
+**Мастерские техники:** Экспертиза с древковым оружием, Мастерство с древковым оружием, Удар щитом 
+
+### Танец с мечами
+
+Школа, посвященная боям на мечах.
+
+**Требования:** владение мечами
+
+**Оружие:** Танец Мечей специализируется на использовании короткого меча, скимитара, длинного меча и двуручного  меча.
+
+**Первичная характеристика:** Сила, Ловкость.
+
+**Физическая подготовка:** сила или ловкость
+
+**Экспертные приемы:** Ответный удар
+
+**Экспертные техники:** Шаг клинка, Рассечение
+
+**Мастерские приемы:** точная атака
+
+**Мастерские техники:** Смертельные удары, Реактивные удары.
+
+---
+
+
+Great Weapon Master – Heavy Striker
+
+Polearm Master - Polearms
+
+Crossbow Expert – Master Crossbowman
+
+Sharpshooter – Arrow Storm
+
+Dual Wielder – Two Swords or Dual Swords
+
+Sentinel -
+
+Mounted Combatant – Ride and Strike
+
+Shield Master –Militant’s Shield, North Shield
+
+Defensive Duelist – Single Blade
+
+---
+
+[Базовые приемы](https://cyborgsandmages.com/posts/cored20rpg/basicmaneuvers)
+
+[Боевые приемы](https://cyborgsandmages.com/posts/cored20rpg/martial-maneuvers)
+
+[Боевые техники](https://cyborgsandmages.com/posts/cored20rpg/martial-techniques)
+
+[Оружейные техники](https://cyborgsandmages.com/posts/cored20rpg/weapon-techniques)
+
+[Техники боевых стилей](https://cyborgsandmages.com/posts/cored20rpg/fighting-styles-techniques)
