--- a/src/content/posts/cored20rpg/martial-schools.mdx
+++ b/src/content/posts/cored20rpg/martial-schools.mdx
@@ -65,7 +65,7 @@ tags:
 
 **Мастерские техники:** Защитная стойка, Парирование.
 
-Примечание автора: эта боевая школа имеет много преимуществ, сходных с умениями «Парное оружие» и «Защитный дуэлянт».
+>Примечание автора: эта боевая школа имеет много преимуществ, сходных с умениями «Парное оружие» и «Защитный дуэлянт».
 
 ### Школа армейского щита
 
