--- a/src/content/posts/cored20rpg/martial-schools.mdx
+++ b/src/content/posts/cored20rpg/martial-schools.mdx
@@ -221,6 +221,8 @@ Defensive Duelist – Single Blade
 
 [Боевые техники](https://cyborgsandmages.com/posts/cored20rpg/martial-techniques)
 
+[Оружейные приемы](https://cyborgsandmages.com/posts/cored20rpg/weapon-maneuvers)
+
 [Оружейные техники](https://cyborgsandmages.com/posts/cored20rpg/weapon-techniques)
 
 [Техники боевых стилей](https://cyborgsandmages.com/posts/cored20rpg/fighting-styles-techniques)
