--- a/src/content/posts/cored20rpg/tactical-maneuvers.mdx
+++ b/src/content/posts/cored20rpg/tactical-maneuvers.mdx
@@ -4,6 +4,8 @@ description: Тактические маневры
 date: '2023-01-01'
 tags:
 - Тактические маневры
+- Оружейные приемы
+- Боевые приемы
 - Core d20 RPG
 ---
 
