--- a/src/content/posts/articles/ttrpg-2023.mdx
+++ b/src/content/posts/articles/ttrpg-2023.mdx
@@ -41,3 +41,5 @@ tags:
 За последние 6 лет темпы роста были гораздо выше - отчасти благодаря пандемии - от 10 до 30 %. В 2022 году рост составил 7% по сравнению с 2021 годом. Несмотря на небольшое увеличение, 2023 год станет 15-м годом роста для всего рынка. Однако ICv2 прогнозирует падение рынка в 2024 году.
 
 ICv2 проводит периодические опросы и беседует с издателями, дистрибьюторами и розничными продавцами, а также использует общедоступную информацию о компаниях и данные Kickstarter.
+
+[Источник](https://www.enworld.org/threads/icv2-reports-disappointing-year-for-hobby-games-channel-ttrpgs-down-d-d-declines-30.703385/)
