--- a/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
+++ b/src/content/posts/cored20rpg/magic-changed-5e-spells.mdx
@@ -136,9 +136,9 @@ author: Антон "Palant" Палихов
 
 **Классы:** Рейнджер
 
-Вы преобразовуете свой колчан для создания бесконечного запас немагических боеприпасов, которые, кажется, прыгают вам в руку, когда вы к ним тянетесь. Пока заклинание не закончилось, когда вы используете действие Атаковать на своем ходу для совершения дальнобойных атак оружием, использующим боеприпасы, вы можете бонусным действием совершить две дополнительные атаки одним и тем же оружием.
+Вы преобразовуете свой колчан для создания бесконечного запаса магических боеприпасов, которые, кажется, прыгают вам в руку, когда вы к ним тянетесь. Пока заклинание не закончилось, когда вы используете действие Атаковать на своем ходу для совершения дальнобойных атак оружием, использующим боеприпасы, вы можете бонусным действием совершить две дополнительные атаки одним и тем же оружием.
 
-Каждый раз, когда вы совершаете такую дальнобойную атаку, ваш колчан волшебным образом заменяет боеприпас, который вы использовали, на аналогичный немагический боеприпас. Любые части боеприпасов, созданные этим заклинанием, распадаются, когда заклинание заканчивается. Если вы больше не носите или не носите колчан, заклинание заканчивается.
+Каждый раз, когда вы совершаете такую дальнобойную атаку, ваш колчан волшебным образом заменяет боеприпас, который вы использовали, на аналогичный магический боеприпас. Любые части боеприпасов, созданные этим заклинанием, распадаются, когда заклинание заканчивается. Если вы больше не носите или не носите колчан, заклинание заканчивается.
 ### <a name="_toc151741013"></a><a name="_toc158169025"></a><a name="_toc160586896"></a>Ведьмовской разряд
 *1-й круг, эвокация, Колдун*
 
@@ -172,7 +172,7 @@ author: Антон "Palant" Палихов
 
 Тонкий зелёный луч срывается с вашего указательного пальца и поражает цель, которую вы видите в пределах дистанции. Целью может быть существо, объект или творение магической силы вроде стены, созданной заклинанием силовая стена.
 
-Существо, ставшее целью этого заклинания, должно совершить спасбросок Ловкости. При провале цель получает 10к8 + 40 силового урона, а при успешном спасброске половину этого урона Если этот урон оставляет цель с 0 хитов, она дезинтегрирована.
+Существо, ставшее целью этого заклинания, должно совершить спасбросок Ловкости. При провале цель получает 10к8 + 40 силового урона, а при успешном спасброске половину этого урона. Если этот урон оставляет цель с 0 хитов, она дезинтегрирована.
 
 Дезинтегрированное существо и всё, что оно носит или держит, кроме магических предметов, превращается в кучку мелкой серой пыли. Существо можно вернуть к жизни только заклинаниями истинное воскрешение или желание.
 
@@ -206,7 +206,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** 8 часов
 
-Класс: рейнджер
+**Класс:** рейнджер
 
 Вы втыкаете четыре стрелы или арбалетные болты в землю вокруг себя, сотворяя на них заклинание, чтобы защитить вас. Пока заклинание не закончится, каждый раз, когда существо первый перемещается в пределах 30 футов от от боеприпасов или оканчивает там ход, один из болтов или стрел взлетает, чтобы поразить его, а затем уничтожается. Существо должно совершить спасбросок Ловкости или получить 2к8 колющего урона. Когда не остается болтов или стрел, заклинание заканчивается.
 
@@ -266,9 +266,9 @@ author: Антон "Palant" Палихов
 
 **Классы:** клерик, паладин, друид, рейнджер, бард
 
-Существо, которого вы коснулись, восстанавливает хитов в количестве 1к10 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
+  Существо, которого вы коснулись, восстанавливает хитов в количестве 1к10 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
 
-**Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 2-го круга или выше, исцеление увеличивается на 2к10 за каждый круг ячейки выше 1-го.
+  **Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 2-го круга или выше, исцеление увеличивается на 2к10 за каждый круг ячейки выше 1-го.
 ### <a name="_toc151741121"></a><a name="_toc158169133"></a><a name="_toc160586903"></a>Лечащее слово
 *1-й круг, призывание (лечение), клерик, друид, бард*
 
@@ -376,7 +376,7 @@ author: Антон "Palant" Палихов
 
 **Классы:** клерик, бард, друид
 
-Волна исцеляющей энергии изливается из выбранной вами точки в пределах дистанции. Выберите не более шести существ в сфере радиусом 30 футов вокруг этой точки. Каждая цель восстанавливает хитов в количестве 3к10 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
+Волна исцеляющей энергии изливается из выбранной вами точки в пределах дистанции. Выберите не более шести существ в сфере радиусом 30 футов вокруг этой точки. Каждая цель восстанавливает хитов в количестве 5к10 + модификатор вашей заклинательной характеристики. Заклинание не действует на нежить и конструкции.
 
 **Используя более высокий круг:** Если вы сотворяете это заклинание, используя ячейку 6-го круга или выше, лечение увеличивается на 2к10 за каждый круг ячейки выше 5-го.
 ### <a name="_toc151741171"></a><a name="_toc158169183"></a><a name="_toc160586910"></a>Массовое лечащее слово
@@ -464,7 +464,7 @@ author: Антон "Palant" Палихов
 
 Вы бросаете оружие или стреляете в воздух, чтобы создать конус из одинакового оружия, которое обрушивается на ваших врагов. Каждое существо в 60-футовом конусе должно преуспеть в спасброске Ловкости или получить 4к8 урона (половину урона при успехе). Тип урона соответствует оружию или боеприпасу, используемых в качестве компонента.
 
-**Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинаний 4-го уровня или выше, урон увеличивается на 2к8 за каждый уровень после 3-го.
+**Используя более высокий круг:** Когда вы сотворяете это заклинание, используя ячейку заклинаний 4-го круга или выше, урон увеличивается на 2к8 за каждый круг после 3-го.
 ### <a name="_toc151741290"></a><a name="_toc158169302"></a><a name="_toc160586915"></a>Призыв залпа
 *5-й круг, воплощение, рейнджер*
 
@@ -514,7 +514,7 @@ author: Антон "Palant" Палихов
 
 **Длительность:** Концентрация, до 1 минуты.
 
-Класс: рейнджер
+**Класс:** рейнджер
 
 В следующий раз, когда вы совершите дальнобойную атаку оружием, пока длится заклинание, боеприпас или само оружие, если оно метательное, превращается в разряд молнии. Совершите бросок атаки, как обычно. Вместо обычного урона от оружия цель получает 4к8 урона молнией при попадании или половину этого урона при промахе.
 
