--- a/src/content/posts/core-d20/cored20rpg-bestiary-npc-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-npc-part-1.mdx
@@ -241,3 +241,40 @@ tags:
 
 Бестиарий Core d20 RPG - Неигровые персонажи, часть 1
 
+---
+
+Связанные с этим материалом статьи
+
+[Боевой дух](https://cyborgsandmages.com/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-boevoj-duh)
+
+[Про классы, существа, роли, шаблоны часть 2](https://cyborgsandmages.com/posts/articles/about-creatures-roles-classes-2) |
+
+[Про массовые сражения в D&D, часть 1](https://cyborgsandmages.com/posts/articles/about-mass-combat-dnd-part-1)
+
+[Зарисовка правил для отряда существ (копья), часть 1](https://cyborgsandmages.com/posts/articles/about-mass-combat-draft-of-troop-rules-1) |
+
+[Про классы, существа, роли](https://cyborgsandmages.com/posts/articles/about-creatures-roles-classes)
+
+[Мысли вслух: Про статблок солдата](https://cyborgsandmages.com/posts/articles/about-soldier-statblock)
+
+[Командиры и отряды](https://cyborgsandmages.com/posts/core-d20/about-commanders-and-units)
+
+[Индекс статей про тактики существ](https://cyborgsandmages.com/posts/articles/bestiary-tactics-index)
+
+[БЕСТИАРИЙ](https://cyborgsandmages.com/posts/core-d20/bestiary)
+
+[Про показатель опасности в пятой редакции](https://cyborgsandmages.com/posts/articles/tomedunn-cr-dnd-5e-analysis)
+
+[Искусство боя малым отрядом: Роль существ](https://cyborgsandmages.com/posts/translations/art-of-combat-small-troop-roles)
+
+[Про солдат, наемных и не только, Часть 1](https://cyborgsandmages.com/posts/articles/about-mercenaries-1)
+
+[Про солдат, наемных и не только, Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
+
+[Про солдат, наемных и не только, Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
+
+---
+
+---
+
+[БЕСТИАРИЙ - ПОЛЕЗНЫЕ ССЫЛКИ](https://cyborgsandmages.com/posts/cored20rpg/bestiary-1)
