--- a/src/content/posts/core-d20/cored20rpg-bestiary-soldiers-part-2.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-soldiers-part-2.mdx
@@ -15,7 +15,7 @@ tags:
   - Обзор
 ---
 
-Продолжаем цикл статей посвященных Бестиарию. В прошлый раз я показывал примеры неигровых персонажей - Гладиатора, шпиона, капитана бандитов и головореза.
+Продолжаем цикл статей посвященных Бестиарию. [В прошлый раз](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-npc-part-1) я показывал примеры неигровых персонажей - Гладиатора, шпиона, капитана бандитов и головореза.
 
 Теперь речь будет идти про стража и солдат. 
 
@@ -363,9 +363,11 @@ tags:
 
 Только наиболее богатые города и крупные государства могут позволить себе содержать многочисленные регулярные армии. Остальные в случае угрозы, которая не по силам страже, могут прибегнуть к услугам наёмников. Впрочем, кому бы и на каких условиях не служили солдаты, они являются суровыми и крепкими бойцами, чьи мечи, копья, луки и другое оружие способны остановить нашествие орков или одолеть тролля.
 
+Продолжение следует...
+
 ---
 
-Бестиарий Core d20 RPG - Неигровые персонажи, часть 1
+[Бестиарий Core d20 RPG - Неигровые персонажи, часть 1](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-npc-part-1)
 
 Бестиарий Core d20 RPG - Солдаты, часть 2
 
