--- a/src/content/posts/core-d20/cored20rpg-bestiary-npc-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-npc-part-1.mdx
@@ -224,7 +224,9 @@ tags:
 
 > Головорезы-безжалостные исполнители, искусные в запугивании и насилии. Они работают за деньги и не испытывают никаких угрызений совести.
 
-# <a name="_toc149844109"></a>ИСПОЛЬЗУЕМЫЕ ИСТОЧНИКИ
+Продолжение следует...
+
+## <a name="_toc149844109"></a>ИСПОЛЬЗУЕМЫЕ ИСТОЧНИКИ
 
 1. Core d20 RPG Bestiary (alpha draft)
 1. [E5E Bestiary rev 13 21032023.docx — Microsoft Word Online (1drv.ms)](https://1drv.ms/w/s!Atcrhwwo1lBA2YMLOf2_oW923CRzlw?e=zKguUK)
@@ -239,7 +241,7 @@ tags:
 
 ---
 
-Бестиарий Core d20 RPG - Неигровые персонажи, часть 1
+[Бестиарий Core d20 RPG - Неигровые персонажи, часть 1](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-npc-part-1)
 
 ---
 
@@ -272,8 +274,6 @@ tags:
 [Про солдат, наемных и не только, Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
 
 [Про солдат, наемных и не только, Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
-
----
 
 ---
 
