--- a/src/content/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5.mdx
@@ -71,7 +71,7 @@ tags:
 |**9**|Мешок запасных тряпок для набивки между слоями доспеха.|
 |**10**|Мешочек крупного песка с вкраплениями ржавчины |
 
-
+
 ### <a name="_toc149844069"></a>Хобгоблин капитан
 *Средний гуманоид (гоблиноид), обычно законно-злой*
 
@@ -116,7 +116,6 @@ tags:
 |**10-11**|Кожаный кошелек с 28 (8к6) мм и 14 (4к6) см.|
 |**12**|<p>1-3 Необычный двуручный меч или Необычное метательное копье</p><p>4-5 Необычный полулатный доспех</p><p>6 Набор из необычных двуручного меча, метательного копья, полулатного доспеха</p>|
 
-
 ### <a name="_toc149844070"></a>Хобгоблин Генерал
 *Средний гуманоид (гоблиноид), обычно законно-злой*
 
@@ -170,7 +169,7 @@ tags:
 |**10-11**|Кожаный кошелек с 28 (8к6) мм и 14 (4к6) см.|
 |**12**|<p>1-3 Необычный длинный меч и необычный щит</p><p>4-5 Необычный длинный меч и необычный латный доспех</p><p>6 Набор из необычных длинного меча, щита, латного доспеха</p>|
 
-### <a name="_toc149844071"></a>Хобгоблин адепт тени
+### <a name="_toc149844071"></a>Хобгоблин адепт тени
 *Средний гуманоид (гоблиноид), обычно законно-злой*
 
 **Класс защиты** 15
@@ -216,7 +215,7 @@ tags:
 ***Теневой прыжок.*** Хобгоблин магически телепортируется вместе со всем переносимым или одетым снаряжением на расстояние до 30 футов в незанятое место, которое может видеть. И место откуда и место куда он перемещается, должны быть в тусклом свете или темноте.
 
 **Источник:** E5E Bestiary
-### <a name="_toc149844072"></a>Хобгоблин заклинатель
+### <a name="_toc149844072"></a>Хобгоблин заклинатель
 *Средний гуманоид (гоблиноид), обычно законно-злой*
 
 **Класс защиты** 16 (кольчуга), 18 со щитом
@@ -403,6 +402,10 @@ tags:
 Бестиарий Core d20 RPG - Дроу, часть 4
 
 Бестиарий Core d20 RPG - Хобгоблины, часть 5
+
+Бестиарий Core d20 RPG - Боевые кони, часть 6
+
+Бестиарий Core d20 RPG - Гоблины, часть 7
 
 ---
 
