--- a/src/content/posts/core-d20/cored20rpg-bestiary-soldiers-part-3.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-soldiers-part-3.mdx
@@ -1156,6 +1156,14 @@ tags:
 
 Бестиарий Core d20 RPG - Солдаты, часть 3
 
+Бестиарий Core d20 RPG - Дроу, часть 4
+
+Бестиарий Core d20 RPG - Хобгоблины, часть 5
+
+Бестиарий Core d20 RPG - Боевые кони, часть 6
+
+Бестиарий Core d20 RPG - Гоблины, часть 7
+
 ---
 
 Связанные с этим материалом статьи
