--- a/src/content/posts/core-d20/cored20rpg-bestiary-npc-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-npc-part-1.mdx
@@ -243,6 +243,18 @@ tags:
 
 [Бестиарий Core d20 RPG - Неигровые персонажи, часть 1](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-npc-part-1)
 
+Бестиарий Core d20 RPG - Солдаты, часть 2
+
+Бестиарий Core d20 RPG - Солдаты, часть 3
+
+Бестиарий Core d20 RPG - Дроу, часть 4
+
+Бестиарий Core d20 RPG - Хобгоблины, часть 5
+
+Бестиарий Core d20 RPG - Боевые кони, часть 6
+
+Бестиарий Core d20 RPG - Гоблины, часть 7
+
 ---
 
 Связанные с этим материалом статьи
