--- a/src/content/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5.mdx
@@ -395,17 +395,17 @@ tags:
 
 [Бестиарий Core d20 RPG - Неигровые персонажи, часть 1](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-npc-part-1)
 
-Бестиарий Core d20 RPG - Солдаты, часть 2
+[Бестиарий Core d20 RPG - Солдаты, часть 2](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-soldiers-part-2)
 
-Бестиарий Core d20 RPG - Солдаты, часть 3
+[Бестиарий Core d20 RPG - Солдаты, часть 3](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-soldiers-part-3)
 
-Бестиарий Core d20 RPG - Дроу, часть 4
+[Бестиарий Core d20 RPG - Дроу, часть 4](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-drow-part-4)
 
-Бестиарий Core d20 RPG - Хобгоблины, часть 5
+[Бестиарий Core d20 RPG - Хобгоблины, часть 5](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5)
 
-Бестиарий Core d20 RPG - Боевые кони, часть 6
+[Бестиарий Core d20 RPG - Боевые кони, часть 6](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-horses-part-6)
 
-Бестиарий Core d20 RPG - Гоблины, часть 7
+[Бестиарий Core d20 RPG - Гоблины, часть 7](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-goblins-part-7)
 
 ---
 
