--- a/src/content/posts/core-d20/cored20rpg-bestiary-horses-part-6.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-horses-part-6.mdx
@@ -114,6 +114,7 @@ tags:
 #### **ДЕЙСТВИЯ**
 **Копыта.** *Атака Оружием Ближнего Боя:* +6 к попаданию, досягаемость 5 футов, одна цель. *Попадание:* 11 (2к6 + 4) дробящего урона.
 
+---
 
 ## <a name="_toc149844109"></a>ИСПОЛЬЗУЕМЫЕ ИСТОЧНИКИ
 
@@ -132,19 +133,17 @@ tags:
 
 [Бестиарий Core d20 RPG - Неигровые персонажи, часть 1](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-npc-part-1)
 
-Бестиарий Core d20 RPG - Солдаты, часть 2
+[Бестиарий Core d20 RPG - Солдаты, часть 2](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-soldiers-part-2)
 
-Бестиарий Core d20 RPG - Солдаты, часть 3
+[Бестиарий Core d20 RPG - Солдаты, часть 3](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-soldiers-part-3)
 
-Бестиарий Core d20 RPG - Дроу, часть 4
+[Бестиарий Core d20 RPG - Дроу, часть 4](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-drow-part-4)
 
-Бестиарий Core d20 RPG - Хобгоблины, часть 5
+[Бестиарий Core d20 RPG - Хобгоблины, часть 5](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5)
 
-Бестиарий Core d20 RPG - Боевые кони, часть 6
+[Бестиарий Core d20 RPG - Боевые кони, часть 6](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-horses-part-6)
 
-Бестиарий Core d20 RPG - Гоблины, часть 7
-
-
+[Бестиарий Core d20 RPG - Гоблины, часть 7](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-goblins-part-7)
 
 ---
 
