--- a/src/content/posts/core-d20/cored20rpg-bestiary-soldiers-part-2.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-soldiers-part-2.mdx
@@ -367,19 +367,34 @@ tags:
 
 ---
 
+## ИСПОЛЬЗУЕМЫЕ ИСТОЧНИКИ
+
+1. Core d20 RPG Bestiary (alpha draft)
+1. [E5E Bestiary rev 13 21032023.docx — Microsoft Word Online (1drv.ms)](https://1drv.ms/w/s!Atcrhwwo1lBA2YMLOf2_oW923CRzlw?e=zKguUK)
+1. [E5E BESTIARY REV 12 (1drv.ms)](https://1drv.ms/w/s!Atcrhwwo1lBA1_AFBntbrfdY9VE5-A?e=i427eK)
+1. [ADDITIONAL STATBLOCKS (1drv.ms)](https://1drv.ms/w/s!Atcrhwwo1lBA19xPShMJ5qjesqPpaA?e=IkqJmE)
+1. [Мысли вслух. Дневник разработчка, Боевой дух | Киборги и Чародеи (cyborgsandmages.com)](https://cyborgsandmages.com/posts/core-d20/mysli-vsluh-dnevnik-razrabotchika-srazhenie-boevoj-duh)
+1. [Про классы, существа, роли, шаблоны часть 2 | Киборги и Чародеи (cyborgsandmages.com)](https://cyborgsandmages.com/posts/articles/about-creatures-roles-classes-2)
+1. [Про массовые сражения в D&D, часть 1 | Киборги и Чародеи (cyborgsandmages.com)](https://cyborgsandmages.com/posts/articles/about-mass-combat-dnd-part-1)
+1. [Зарисовка правил для отряда существ (копья), часть 1 | Киборги и Чародеи (cyborgsandmages.com)](https://cyborgsandmages.com/posts/articles/about-mass-combat-draft-of-troop-rules-1)
+1. [Про классы, существа, роли | Киборги и Чародеи (cyborgsandmages.com)](https://cyborgsandmages.com/posts/articles/about-creatures-roles-classes)
+1. [Мысли вслух: Про статблок солдата | Киборги и Чародеи (cyborgsandmages.com)](https://cyborgsandmages.com/posts/articles/about-soldier-statblock)
+
+---
+
 [Бестиарий Core d20 RPG - Неигровые персонажи, часть 1](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-npc-part-1)
 
-Бестиарий Core d20 RPG - Солдаты, часть 2
+[Бестиарий Core d20 RPG - Солдаты, часть 2](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-soldiers-part-2)
 
-Бестиарий Core d20 RPG - Солдаты, часть 3
+[Бестиарий Core d20 RPG - Солдаты, часть 3](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-soldiers-part-3)
 
-Бестиарий Core d20 RPG - Дроу, часть 4
+[Бестиарий Core d20 RPG - Дроу, часть 4](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-drow-part-4)
 
-Бестиарий Core d20 RPG - Хобгоблины, часть 5
+[Бестиарий Core d20 RPG - Хобгоблины, часть 5](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5)
 
-Бестиарий Core d20 RPG - Боевые кони, часть 6
+[Бестиарий Core d20 RPG - Боевые кони, часть 6](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-horses-part-6)
 
-Бестиарий Core d20 RPG - Гоблины, часть 7
+[Бестиарий Core d20 RPG - Гоблины, часть 7](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-goblins-part-7)
 
 ---
 
@@ -412,8 +427,6 @@ tags:
 [Про солдат, наемных и не только, Часть 2](https://cyborgsandmages.com/posts/articles/about-mercenaries-2)
 
 [Про солдат, наемных и не только, Часть 3](https://cyborgsandmages.com/posts/articles/about-mercenaries-3)
-
----
 
 ---
 
