--- a/src/content/posts/core-d20/cored20rpg-bestiary-drow-part-4.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-drow-part-4.mdx
@@ -15,7 +15,7 @@ tags:
 
 Если предыдущие статьи концентрировались на представителях надземной цивилизации, то здесь мы будем говорить о подземной. Про дроу.
 
-Ранее мы уже говорили о дроу в контексте их тактики и столкновений с дроу.
+Ранее мы уже говорили [о дроу в контексте их тактики и столкновений с дроу](https://cyborgsandmages.com/posts/articles/drow-tactics-lore-encounters).
 
 ## <a name="_toc100250817"></a><a name="_toc149844058"></a><a name="_toc149844057"></a>Дроу
 
