--- a/src/content/posts/core-d20/cored20rpg-bestiary-goblins-part-7.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-goblins-part-7.mdx
@@ -13,6 +13,17 @@ tags:
   - Обзор
 ---
 
+В предыдущих статьях мы писали про:
+
+- обычных [неигровых персонажей](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-npc-part-1).
+- солдат ([часть 1](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-soldiers-part-2) и [часть 2](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-soldiers-part-3))
+- [дроу](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-drow-part-4)
+- [хобгоблинов](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5)
+- [боевых коней](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-horses-part-6)
+
+Гоблины, как и дроу с хобгоблинами, также рассматривались нами в [цикле статей про тактики существ](https://cyborgsandmages.com/posts/articles/goblins-tactics-lore-encounters).
+
+
 ## Гоблины
 
 ### Гоблин
