--- a/src/content/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-hobgoblins-part-5.mdx
@@ -13,9 +13,9 @@ tags:
   - Обзор
 ---
 
-В предыдущих статьях мы рассматривали черновики из Бестиария Core d20 RPG - неигровых персонажей, солдат (часть 1, часть 2), дроу.
+В предыдущих статьях мы рассматривали черновики из Бестиария Core d20 RPG - [неигровых персонажей](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-npc-part-1), солдат ([часть 1](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-soldiers-part-2), [часть 2](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-soldiers-part-3)), [дроу](https://cyborgsandmages.com/posts/core-d20/cored20rpg-bestiary-drow-part-4).
 
-В этой мы рассмотрим хобгоблинов. Про хобгоблинов мы также уже раньше писали.
+В этой мы рассмотрим хобгоблинов. [Про хобгоблинов мы также уже раньше писали](https://cyborgsandmages.com/posts/articles/hobgoblins).
 
 
 ## <a name="_toc149844067"></a>Хобгоблины
