--- a/src/content/posts/core-d20/cored20rpg-bestiary-npc-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-npc-part-1.mdx
@@ -16,6 +16,7 @@ tags:
   - D&D 5e
   - E5E
   - Обзор
+  - Core d20 RPG
 ---
 
 В рамках разработки бестиария для Core d20 RPG пришлось достаточно много думать над созданием типовых статблоков. 
