--- a/src/content/posts/core-d20/cored20rpg-bestiary-npc-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-npc-part-1.mdx
@@ -96,6 +96,9 @@ tags:
 
 **Бросок противника.** Когда существо, которое видит гладиатор, промахивается по нему атакой оружием ближнего боя, оно совершает спасбросок Ловкости КС 17. При неудаче оно отталкивается от гладиатора на 15 футов.
 
+> Напомню, если вы цените нашу работу - подпишитесь, пожалуйста, на [Patreon](http://patreon.com/palikhov/) или [Boosty](https://boosty.to/cyborgsandmages).
+
+
 ### <a name="_toc149843999"></a>БАНДИТСКИЙ КАПИТАН [2]
 *Средний гуманоид (любая раса), любое мировоззрение кроме законного*
 
