--- a/src/content/posts/core-d20/cored20rpg-bestiary-soldiers-part-2.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-soldiers-part-2.mdx
@@ -23,6 +23,11 @@ tags:
 
 Это черновик набросков мыслей про статблоки солдат.
 
+
+> Напомню, если вы цените нашу работу - подпишитесь, пожалуйста, на [Patreon](http://patreon.com/palikhov/) или [Boosty](https://boosty.to/cyborgsandmages).
+
+
+
 ## <a name="_toc149844002"></a>Солдаты
 
 Базовым статблоком в этом случае выступает Страж [1/4] и Солдат [1/2].
