--- a/src/content/posts/core-d20/cored20rpg-bestiary-soldiers-part-2.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-soldiers-part-2.mdx
@@ -21,7 +21,7 @@ tags:
 
 Солдаты - в этом плане весьма интересный вид существа, поскольку он должен подходить под много различных видов войск, что задается особенностями солдата и его снаряжением.
 
-Это черновик набросков мыслей про статблоки солдат.
+Это набросок моих мыслей про статблоки солдат.
 
 
 > Напомню, если вы цените нашу работу - подпишитесь, пожалуйста, на [Patreon](http://patreon.com/palikhov/) или [Boosty](https://boosty.to/cyborgsandmages).
