--- a/src/content/posts/core-d20/cored20rpg-bestiary-creature-entry-part-1.mdx
+++ b/src/content/posts/core-d20/cored20rpg-bestiary-creature-entry-part-1.mdx
@@ -643,6 +643,10 @@ tags:
 **Х / КО.** Обозначение “Х/КО” означает, что специальная способность может использоваться Х раз и существо должно закончить короткий отдых, что восстановить израсходованные использования.
 
 **Х / Ход.** Обозначение “Х/Ход” означает, что специальная способность может использоваться Х раз на ходу персонажа и все израсходованные использования восстанавливаются в начале хода существа.
+
+**Пока (состояние).** Обозначение "Пока (состояние)" означает, что 
+эта способность существа может быть использована, пока существо находится в состоянии, указанном в скобках. Наиболее часто используется для состояния "ранен". 
+
 ## Действия чемпиона
 Действия чемпиона – это дополнительные действия, которые увеличивают количество действий, которые существо может предпринять за 1 ход и они являются тематически расширенными действиями, к которым оно получает доступ на 3-ем раунде сражения, и каждый раунд вплоть до 5ого получает дополнительный выбор действия чемпиона. 
 
